# Graduation-Project

./: .gitmodules
APP/TestRestApi/: settings.gradle
APP/TestRestApi/amplify/: team-provider-info.json
APP/TestRestApi/amplify/.config/: project-config.json
APP/TestRestApi/amplify/backend/: backend-config.json
APP/TestRestApi/amplify/backend/api/: APIGatewayAuthStack.json
APP/TestRestApi/amplify/backend/api/api/: cli-inputs.json
APP/TestRestApi/amplify/backend/auth/testrestapi/: cli-inputs.json
APP/TestRestApi/amplify/backend/function/todo/: todo-cloudformation-template.json
APP/TestRestApi/amplify/backend/function/todo/src/: app.js  index.js  package-lock.json
APP/TestRestApi/amplify/backend/types/: amplify-dependent-resources-ref.d.ts
APP/TestRestApi/app/: build.gradle
APP/TestRestApi/app/src/main/: AndroidManifest.xml
APP/TestRestApi/app/src/main/res/layout/: activity_admin.xml  activity_chart_cost.xml  activity_chart_current.xml  activity_chart_energy.xml  activity_chart_frequency.xml  activity_chart_voltage.xml  activity_device1.xml  (+20 more)
APP/TestRestApi/gradle/wrapper/: gradle-wrapper.properties
BE/Lambda Function/: app.js  event.json  index.js  package-lock.json  package.json
FW/: CMakeLists.txt  sdkconfig
FW/main/: CMakeLists.txt  adc_dev.c  adc_dev.h  app_main.c  app_main.cpp  aws.c  aws.h  cmd.c  cmd.h  config.h  nextion.c  nextion.h  pzem.c  pzem.cpp  pzem.h  wifi.c  wifi.h  ws2812_driver.c  ws2812_driver.h
FW/main/aws/certs/: cert.h
FW/main/aws/inc/: aws_iot_config.h
FW/main/aws/src/: aws_iot_mqtt_client_common_internal.c
(+30 files in other folders)
